# python-rye

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/: main.py
src/python_rye/: __init__.py
