[project]
name = "python-rye"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "gomadoufu", email = "49393637+gomadoufu@users.noreply.github.com" }
]
dependencies = [
    "pre-commit>=3.7.0",
    "ruff>=0.4.1",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
